Fix project icons gap

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -257,7 +257,7 @@
   .project-icons {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
   }
   
   .project-icons figure {
